Updates Made in this commit: .) JDBC_Table Updated to use Sqlite3 & Added Validation methods for data
.) Macro_Targets/Left, TotalMeal_Table Updated To match new DB Schema

.) Sqlite_JDBC updated to handle db data mismatch for bigDecimals & Data validation checks on params

.) DB_Schema Update

.) Shared_Data_Registry update for new DB changes

.) IngredientsTable.java db changes

.) MPS update to setup app

Next To Do:

.) Views for drafts / does the logic need to be duplicated

.) Meal_Plan_Screen.java initialization scripts
.) Use migration runner & log errors

.) Edit Screen delete / refresh btn

Previous Updates:
.)

Errors
.)